--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,32 +51,32 @@ services:
         aliases:
         - timescale.plant-buddy.com
 
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    ports:
-      - 27017:27017
-    networks:
-      plant-buddy-bridge:
-        aliases:
-        - mongodb.plant-buddy.com
+  # mongo:
+  #   image: mongo
+  #   restart: always
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: root
+  #     MONGO_INITDB_ROOT_PASSWORD: example
+  #   ports:
+  #     - 27017:27017
+  #   networks:
+  #     plant-buddy-bridge:
+  #       aliases:
+  #       - mongodb.plant-buddy.com
 
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-    networks:
-      plant-buddy-bridge:
-        aliases:
-        - mongo-express.plant-buddy.com
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
+  #     ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+  #   networks:
+  #     plant-buddy-bridge:
+  #       aliases:
+  #       - mongo-express.plant-buddy.com
 
   pgAdmin:
     image: dpage/pgadmin4
