--- a/pb-api-rest/package.json
+++ b/pb-api-rest/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "sim-device",
+  "name": "mqtt-api",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./client.js"
+    "dev": "nodemon ./index.js"
   },
   "dependencies": {
-    "mqtt": "^4.3.7",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
