--- a/pb-bridge/package.json
+++ b/pb-bridge/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon ./subscriber.js"
   },
   "dependencies": {
-    "mqtt": "^4.3.7"
+    "mqtt": "^4.3.7",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
