--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,8 +83,8 @@ services:
     ports:
       - 8082:80
     environment:
-      - PGADMIN_DEFAULT_EMAIL=name@example.com
-      - PGADMIN_DEFAULT_PASSWORD=timescale
+      - PGADMIN_DEFAULT_EMAIL=admin@plantbuddy.com
+      - PGADMIN_DEFAULT_PASSWORD=public
     networks:
       plant-buddy-bridge:
         aliases:
